--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.7.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "web-vitals": "^4.2.4"
   },
   "devDependencies": {
