--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "apexcharts": "^4.5.0",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
+    "react-bootstrap": "^2.10.9",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
